# pyMMF

./: .buildinfo  .gitignore  CHANGES.md  LICENSE  README.md  RadialSolverGRIN.ipynb  api.html  changes_link.html  cog.yaml  examples.html  genindex.html  index.html  introduction.html  objects.inv  predict.py  pyMMF.py  pyproject.toml  readme_link.html  requirements.txt  search.html  searchindex.js  setup.py  solve-SI.html  solve-WKB.html  solver.eig.html  solver.radial.html
.github/workflows/: build_docs.yml  build_mkdocs.yml  run_tests.yaml
_modules/: index.html
_modules/pyMMF/: core.html  index_profile.html  modes.html
_sources/: examples.md.txt  introduction.rst.txt  readme_link.rst.txt  solve-SI.rst.txt  solver.eig.rst.txt  solver.radial.rst.txt
_static/css/: custom.css
bckp_polar/: SI.py  core.py  modes.py
docs/: Makefile  api.md  api.rst  changes_link.rst  conf.py  examples.md  index.rst  make.bat  mkdocs.yml  requirements.txt  solve-WKB.rst  usage.rst
docs/docs/: Benchmark_SI.ipynb  GRIN.ipynb  GRIN_profile.pkl  Square_fiber.ipynb  api.md  index.md
docs/examples/: Benchmark_SI.ipynb  (+3 more)
example/: .gitignore  Benchmark_SI.ipynb  RadialSolverGRIN.ipynb  __init__.py  functions.py  pymmf_performance.ipynb
examples/: Benchmark_SI.html  RadialSolverGRIN.html  RadialSolverGRIN.ipynb  Square_fiber.html  Square_fiber.ipynb  __init__.py  benchmark_GRIN_comsol.html  benchmark_GRIN_comsol.ipynb
paper/: paper.md
pyMMF/: SI.py  TM.py  __init__.py  core.py  functions.py  index_profile.py  logger.py  modes.py  pyMMF.py
test/: basic_tests.py
tests/: tests.py
(+39 files in other folders)
